--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <h1><%= I18n.t('users.accounts') %></h1>
 
 <div class='main-input-area'>
+  <!--render the partial users/_users_list.html.erb
+      use the object: input to pass @users to the partial
+      @users will be referenced in the partial using users_list(same name as the partial)-->
   <%= render partial: 'users_list', object: @users %>
 </div>
 
@@ -23,13 +26,3 @@
   </div>
 
 </div>
-
-
-
- 
-
- 
-
-
- 
-
